--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@
     margin: 0;
     padding: 0;
     outline: 0;
-    appearance: none;
+    appearance : none;
     border: 0;
     text-decoration: none;
     list-style: none;
@@ -56,11 +56,12 @@ html{
 }
 body{
     width: 100vw;
-    height: 100vh;
+    min-height: 100vh;
     font-family: poppins;
     font-size: 0.88rem;
     background: var(--color-backgroud);
     user-select: none;
+    /* overflow: hidden; */
     color: var(--color-dark);
 }
 a{
@@ -647,7 +648,4 @@ main .recent-order a{
     .right .top button span{
         font-size: 2rem;
     }
-
 }
-
-
